tests/src/frontend/syntax/invalid/mutable_readonly_method.sk
class C() {
  readonly mutable fun m(): String { "Fail" }
}

fun main(): String {
  C::m()
}
